secton symptoms css

--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
                         <input id="about-more__phone" type="tel" name="phone" value="" placeholder="Телефон">
                     </p>
                     <div>
-                        <button class="about-more__button button-for-all" type="submit">Узнать <img src="build/img/arrow.svg" alt=""></button>
+                        <button class="about-more__button button-for-all" type="submit">Узнать <img
+                                src="build/img/arrow.svg" alt=""></button>
                         <div class="clearfix"></div>
                     </div>
                 </form>
@@ -60,134 +61,196 @@
         </div>
     </section>
 
-
     <section class="facts">
         <h2 class="visually-hidden">Факты о бальзаме</h2>
-        <ul class="facts__item">
-            <li class="facts__less">1978 г.</li>
-            <li class="facts__description">Европейцы используют шведскую горечь еще с 1978 года</li>
-        </ul>
-        <ul class="facts__item">
-            <li class="facts__less">104 года</li>
-            <li class="facts__description">104 года прожил автор бальзама</li>
-        </ul>
-        <ul class="facts__item">
-            <li class="facts__less">40 показаний</li>
-            <li class="facts__description">Больше 40 показаний к применению</li>
-        </ul>
-        <ul class="facts__item">
-            <li class="facts__less">24 языка</li>
-            <li class="facts__description">8 млн книг на 24 языках продано о бальзаме</li>
-        </ul>
+        <div class="facts__wrapper">
+            <ul class="facts__item facts__item-first">
+                <li class="facts__less">1978 г.</li>
+                <li class="facts__description">Европейцы используют шведскую горечь еще с 1978 года</li>
+            </ul>
+            <ul class="facts__item">
+                <li class="facts__less">104 года</li>
+                <li class="facts__description">104 года прожил автор бальзама</li>
+            </ul>
+            <ul class="facts__item">
+                <li class="facts__less">40 показаний</li>
+                <li class="facts__description">Больше 40 показаний к применению</li>
+            </ul>
+            <ul class="facts__item facts__item-last">
+                <li class="facts__less">24 языка</li>
+                <li class="facts__description">8 млн книг на 24 языках продано о бальзаме</li>
+            </ul>
+        </div>
     </section>
 
-    <section class="saying">
-        <h2 class="visually-hidden">Цитата создателя бальзама</h2>
-        <blockquote class="saying__all">
-            «Кто принимает бальзам утром
-            и вечером, тому не нужны другие лекарства, так как он укрепляет тело,
-            оживляет нервы и освежает кровь, снимает дрожь в руках и ногах.
-            Тело остается упругим, лицо молодым и красивым»
-        </blockquote>
-        <cite class="saying__autor">
-            Автор бальзама, Доктор Клаус Замст
-        </cite>
-        <p class="saying__year">
-            /1620-1724 г./
-        </p>
-    </section>
+    <section class="symptoms">
 
-    <section class="set">
-        <h2 class="set__description"> Что вы получите вместе со сбором трав «Шведская горечь»?</h2>
-        <ul class="set__item">
-            <li class="set__number">01</li>
-            <li class="set__img"></li>
-            <li class="set__about">Сбор трав</li>
-        </ul>
-        <ul class="set__item">
-            <li class="set__number">02</li>
-            <li class="set__img"></li>
-            <li class="set__about">Инструкция по применению</li>
-        </ul>
-        <ul class="set__item">
-            <li class="set__number">03</li>
-            <li class="set__img"></li>
-            <li class="set__about">Сертификат качества</li>
-        </ul>
-    </section>
+        <h2 class="visually-hidden">Показания к применению</h2>
+        <p class="symptoms__question">Что из этого списка <br> вы находите у себя?</p>
+        <div class="for_desktop_wrapper">
 
-    <section class="composition">
-        <h2 class="composition__less">Состав «Шведской горечи»</h2>
-        <ul class="composition__description-up">
-            <li class="composition__description-more">Все травы, входящие в сбор, собраны в альпийском заповеднике
-                «Гуркталь» и имеют немецкий сертификат качества.
-            </li>
-            <li class="composition__description-more">Строго выверенные пропорции каждого компонента в составе</li>
-        </ul>
+            <div class="for_desktop_wrapper_content">
 
-        <ul class="composition__description-down">
-            <li class="composition__description-more">Все травы в составе бальзама обладают сильным очищающим
-                воздействием, при этом каждый из компонентов усиливает действие остальных.
-            </li>
-            <li class="composition__description-more-desktop">Соединяясь вместе они создают мощный очищающий эффект. Как
-                оказалось, именно за счет этого эффекта бальзам способен исцелять многие болезни.
-            </li>
-        </ul>
+                <div class="for_bgc">
+                    <div class="wrapper-content">
+                        <ol class="symptoms__list symptoms__list-top">
+                            <li class="symptoms__item"><span class="num">01.</span>Сниженный тонус, не хватает энергии
+                            </li>
+                            <li class="symptoms__item"><span class="num">02.</span>Прыщи, бородавки и растяжки</li>
+                            <li class="symptoms__item"><span class="num">03.</span>Слабая память и концентрация</li>
+                            <li class="symptoms__item"><span class="num">04.</span>Болеете чаще раза в год?</li>
+                            <li class="symptoms__item"><span class="num">05.</span>Головные боли</li>
+                        </ol>
+                        <ol class="symptoms__list symptoms__list-bottom">
+                            <li class="symptoms__item"><span class="num">06.</span>Синяки, шишки, ожоги, порезы долго не
+                                проходят
+                            </li>
+                            <li class="symptoms__item"><span class="num">07.</span>Плохо засыпаете и часто просыпаетесь
+                            </li>
+                            <li class="symptoms__item"><span class="num">08.</span>Проблемы с желудком</li>
+                            <li class="symptoms__item"><span class="num">09.</span>Стресс</li>
+                        </ol>
+                    </div>
+                </div>
+                <div class="symptoms__human">
 
-        <div class="composition__card">
-            <img src="build/img/component-01.jpg" alt="Изображение компонента">
-            <img src="build/img/component-02.jpg" alt="Изображение компонента">
-            <img src="build/img/component-03.jpg" alt="Изображение компонента">
-            <img src="build/img/component-04.jpg" alt="Изображение компонента">
-            <img src="build/img/component-05.jpg" alt="Изображение компонента">
-            <img src="build/img/component-06.jpg" alt="Изображение компонента">
-            <img src="build/img/component-07.jpg" alt="Изображение компонента">
-            <img src="build/img/component-08.jpg" alt="Изображение компонента">
-            <img src="build/img/component-09.jpg" alt="Изображение компонента">
-            <img src="build/img/component-10.jpg" alt="Изображение компонента">
-            <img src="build/img/component-11.jpg" alt="Изображение компонента">
+                    <div class="symptoms__human-img"></div>
+
+
+                    <div class="symptoms__testimonials">
+                        <div class="wrapper-testimonials">
+                            <fieldset>
+                                <div class="symptoms__wrapper-testimonials">
+                                    <p>Более 2 000 покупателей доказали эффективность «Шведской горечи» в каждом из этих
+                                        случаев</p>
+                                </div>
+                                <legend align="center">
+                                    <a href="#">Читать отзывы</a>
+                                </legend>
+                            </fieldset>
+                        </div>
+                    </div>
+                </div>
+                <div class="clearfix"></div>
+
+                <a class="symptoms__btn button-for-all" href="#">Избавиться от проблем <img src="build/img/arrow.svg"
+                                                                                            alt=""></a>
+
+
+            </div>
         </div>
 
-        <a class="composition__btn order__btn" href="#">Заказать сбор трав</a>
     </section>
 
-    <section class="guarantee">
-        <h2 class="guarantee__less">Гарантия качества</h2>
-        <p class="guarantee__description-up">Если бальзам вам не понравится, мы вернем деньги. Сразу и без лишних
-            вопросов. Мы дорожим своей репутацией и уверены в продукте на 100%</p>
-        <div class="guarantee__sertificate"></div>
-        <div class="guarantee__description-down">
-            <p class="guarantee__but">HO:</p>
-            <p>Этот эликсир – именно то средство,
-                которое вам всегда захочется иметь
-                дома в аптечке и рекомендовать
-                своим близким.
-            </p>
-            <p>К каждой упаковке «Шведской горечи»
-                мы прикладываем немецкий сертифи-
-                кат качества.
-            </p>
-        </div>
+    <!-- <section class="saying">
+         <h2 class="visually-hidden">Цитата создателя бальзама</h2>
+         <blockquote class="saying__all">
+             «Кто принимает бальзам утром
+             и вечером, тому не нужны другие лекарства, так как он укрепляет тело,
+             оживляет нервы и освежает кровь, снимает дрожь в руках и ногах.
+             Тело остается упругим, лицо молодым и красивым»
+         </blockquote>
+         <cite class="saying__autor">
+             Автор бальзама, Доктор Клаус Замст
+         </cite>
+         <p class="saying__year">
+             /1620-1724 г./
+         </p>
+     </section>
 
-        <a class="guarantee__btn order__btn" href="#">Заказать сбор трав</a>
-    </section>
+     <section class="set">
+         <h2 class="set__description"> Что вы получите вместе со сбором трав «Шведская горечь»?</h2>
+         <ul class="set__item">
+             <li class="set__number">01</li>
+             <li class="set__img"></li>
+             <li class="set__about">Сбор трав</li>
+         </ul>
+         <ul class="set__item">
+             <li class="set__number">02</li>
+             <li class="set__img"></li>
+             <li class="set__about">Инструкция по применению</li>
+         </ul>
+         <ul class="set__item">
+             <li class="set__number">03</li>
+             <li class="set__img"></li>
+             <li class="set__about">Сертификат качества</li>
+         </ul>
+     </section>
+
+     <section class="composition">
+         <h2 class="composition__less">Состав «Шведской горечи»</h2>
+         <ul class="composition__description-up">
+             <li class="composition__description-more">Все травы, входящие в сбор, собраны в альпийском заповеднике
+                 «Гуркталь» и имеют немецкий сертификат качества.
+             </li>
+             <li class="composition__description-more">Строго выверенные пропорции каждого компонента в составе</li>
+         </ul>
+
+         <ul class="composition__description-down">
+             <li class="composition__description-more">Все травы в составе бальзама обладают сильным очищающим
+                 воздействием, при этом каждый из компонентов усиливает действие остальных.
+             </li>
+             <li class="composition__description-more-desktop">Соединяясь вместе они создают мощный очищающий эффект. Как
+                 оказалось, именно за счет этого эффекта бальзам способен исцелять многие болезни.
+             </li>
+         </ul>
+
+         <div class="composition__card">
+             <img src="build/img/component-01.jpg" alt="Изображение компонента">
+             <img src="build/img/component-02.jpg" alt="Изображение компонента">
+             <img src="build/img/component-03.jpg" alt="Изображение компонента">
+             <img src="build/img/component-04.jpg" alt="Изображение компонента">
+             <img src="build/img/component-05.jpg" alt="Изображение компонента">
+             <img src="build/img/component-06.jpg" alt="Изображение компонента">
+             <img src="build/img/component-07.jpg" alt="Изображение компонента">
+             <img src="build/img/component-08.jpg" alt="Изображение компонента">
+             <img src="build/img/component-09.jpg" alt="Изображение компонента">
+             <img src="build/img/component-10.jpg" alt="Изображение компонента">
+             <img src="build/img/component-11.jpg" alt="Изображение компонента">
+         </div>
+
+         <a class="composition__btn order__btn" href="#">Заказать сбор трав</a>
+     </section>
+
+     <section class="guarantee">
+         <h2 class="guarantee__less">Гарантия качества</h2>
+         <p class="guarantee__description-up">Если бальзам вам не понравится, мы вернем деньги. Сразу и без лишних
+             вопросов. Мы дорожим своей репутацией и уверены в продукте на 100%</p>
+         <div class="guarantee__sertificate"></div>
+         <div class="guarantee__description-down">
+             <p class="guarantee__but">HO:</p>
+             <p>Этот эликсир – именно то средство,
+                 которое вам всегда захочется иметь
+                 дома в аптечке и рекомендовать
+                 своим близким.
+             </p>
+             <p>К каждой упаковке «Шведской горечи»
+                 мы прикладываем немецкий сертифи-
+                 кат качества.
+             </p>
+         </div>
+
+         <a class="guarantee__btn order__btn" href="#">Заказать сбор трав</a>
+     </section>
+ </main>
+
+ <footer class="page-footer">
+     <a class="page-footer__logo" href="#">
+         <img class="page-footer__logo-image" src="build/img/logo-tablet.png" alt="Шведская горечь" width="198"
+              height="29">
+     </a>
+     <ul class="page-footer__additions">
+         <li class="page-footer__confidence">Политика конфиденциальности</li>
+         <li class="page-footer__refuse">Отказ от ответственности</li>
+         <li class="page-footer__agree">Согласие с рассылкой</li>
+     </ul>
+     <ul class="page-footer__phone bitter-phone">
+         <li class="page-footer__number bitter-phone__num">8 800 000-00-00</li>
+         <li class="page-footer__about-phone bitter-phone__about">Звонок бесплатный</li>
+     </ul>
+ </footer>-->
+
 </main>
-
-<footer class="page-footer">
-    <a class="page-footer__logo" href="#">
-        <img class="page-footer__logo-image" src="build/img/logo-tablet.png" alt="Шведская горечь" width="198"
-             height="29">
-    </a>
-    <ul class="page-footer__additions">
-        <li class="page-footer__confidence">Политика конфиденциальности</li>
-        <li class="page-footer__refuse">Отказ от ответственности</li>
-        <li class="page-footer__agree">Согласие с рассылкой</li>
-    </ul>
-    <ul class="page-footer__phone bitter-phone">
-        <li class="page-footer__number bitter-phone__num">8 800 000-00-00</li>
-        <li class="page-footer__about-phone bitter-phone__about">Звонок бесплатный</li>
-    </ul>
-</footer>
 </body>
 </html>
 
