--- a/index.html
+++ b/index.html
@@ -135,10 +135,83 @@
 
                 <a class="symptoms__btn button-for-all" href="#">Избавиться от проблем <img src="build/img/arrow.svg"
                                                                                             alt=""></a>
-
-
             </div>
         </div>
+
+        <div class="clearfix"></div>
+    </section>
+
+    <section class="reasons">
+        <h2 class="visually-hidden">Почему Шведская Горечь популярна?</h2>
+        <div class="reasons-bg"></div>
+        <div class="reasons__content">
+
+            <div class="reasons__wrapper-first">
+                <p class="reasons__question">Почему Шведская Горечь завоевала такую популярность?</p>
+                <p class="reasons__some">Вот лишь несколько причин:</p>
+
+                <ul class="reasons__why">
+                    <li class="reasons__item">Эффективность как при наружном, так и внутреннем применении, более 40
+                        показаний к
+                        применению
+                    </li>
+                    <li class="reasons__item">Случаи излечения с помощью сбора, когда традиционная медицина не смогла
+                        помочь
+                    </li>
+                    <li class="reasons__item">Постоянно выявляются новые целительные свойства бальзама</li>
+                    <li class="reasons__item">Эффект от применения можно увидеть сразу</li>
+                </ul>
+            </div>
+
+
+            <div class="reasons__wrapper-second">
+                <div class="reasons__wrapper">
+                    <div class="reasons__wrapper-content">
+                        <p class="reasons__other-country">Даже в странах с очень высоким уровнем медицины, таких как
+                            Германия и
+                            Австрия, бальзам Шведская Горечь
+                            продается в каждой аптеке!</p>
+                        <a class="button-for-all reasons__button" href="#">Получить <span
+                                class="reasons__button-extra-name">средство-панацею</span> к себе в аптечку<img
+                                src="build/img/arrow.svg"
+                                alt=""></a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+    </section>
+
+    <section class="history">
+        <h2 class="history__intro">Удивительная история возникновения бальзама</h2>
+
+        <div class="history__wrapper-story">
+        <p class="history__story">Далеко не у каждого лекарственного препарата есть такая удивительная история возникновения, уходящая к временам Парацельса, как у «Шведской горечи». Всю свою жизнь Парацельс искал эликсир долголетия!</p>
+
+        <p class="history__story">Он экспериментировал с рецептами, в которых горькие коренья комбинировались
+            с разными лекарственными травами. Позднее в 18 веке на основании оставшихся после Парацельса исследований шведский доктор Клауст Замст создал рецепт удивительного эликсира, который он принимал всю свою жизнь. Кстати, умер
+            доктор Замст на 104-м году жизни, упав с лошади при верховой езде.</p>
+
+        <p class="history__story">В конце прошлого века рецепт попал к известной австрийской травнице Марии Трэбэн, которая, изучив и дополнив его, популяризовала в странах Европы. Теперь сбор трав «Шведская горечь» помогает людям по всему миру.</p>
+        </div>
+
+        <div class="history__author-img"></div>
+
+        <div class="history__mail">
+            <p class="history__offer">Оставьте свою почту и получайте рецепты молодости и здоровья каждую неделю</p>
+
+            <form class="history__form" action="#" method="post">
+                <p class="history__item">
+                    <label for="history__name"></label>
+                    <input id="history__name" type="email" name="email" value="" placeholder="E-mail">
+                </p>
+            </form>
+
+            <a class="button-for-all history__button" href="#">Оставить почту <img src="build/img/arrow.svg" alt=""></a>
+        </div>
+
+
 
     </section>
 
