--- a/index.html
+++ b/index.html
@@ -184,35 +184,62 @@
     </section>
 
     <section class="history">
-        <h2 class="history__intro">Удивительная история возникновения бальзама</h2>
+        <div class="history__author-img-for-desktop"></div>
+
+        <div class="history__wrapper-content">
+            <div class="history__wrapper-intro">
+                <h2 class="history__intro">Удивительная <br>история возникновения<br> бальзама</h2>
+            </div>
+        </div>
 
         <div class="history__wrapper-story">
-        <p class="history__story">Далеко не у каждого лекарственного препарата есть такая удивительная история возникновения, уходящая к временам Парацельса, как у «Шведской горечи». Всю свою жизнь Парацельс искал эликсир долголетия!</p>
+            <div class="history__content-story">
+                <div class="history__container">
+                    <p class="history__story">Далеко не у каждого лекарственного препарата есть такая удивительная
+                        история
+                        возникновения, уходящая к временам Парацельса, как у «Шведской горечи». Всю свою жизнь Парацельс
+                        искал
+                        эликсир долголетия!</p>
 
-        <p class="history__story">Он экспериментировал с рецептами, в которых горькие коренья комбинировались
-            с разными лекарственными травами. Позднее в 18 веке на основании оставшихся после Парацельса исследований шведский доктор Клауст Замст создал рецепт удивительного эликсира, который он принимал всю свою жизнь. Кстати, умер
-            доктор Замст на 104-м году жизни, упав с лошади при верховой езде.</p>
+                    <p class="history__story">Он экспериментировал с рецептами, в которых горькие коренья
+                        комбинировались
+                        с разными лекарственными травами. Позднее в 18 веке на основании оставшихся после Парацельса
+                        исследований шведский доктор Клауст Замст создал рецепт удивительного эликсира, который он
+                        принимал
+                        всю
+                        свою жизнь. Кстати, умер
+                        доктор Замст на 104-м году жизни, упав с лошади при верховой езде.</p>
 
-        <p class="history__story">В конце прошлого века рецепт попал к известной австрийской травнице Марии Трэбэн, которая, изучив и дополнив его, популяризовала в странах Европы. Теперь сбор трав «Шведская горечь» помогает людям по всему миру.</p>
+                    <p class="history__story">В конце прошлого века рецепт попал к известной австрийской травнице Марии
+                        Трэбэн,
+                        которая, изучив и дополнив его, популяризовала в странах Европы. Теперь сбор трав «Шведская
+                        горечь»
+                        помогает людям по всему миру.</p>
+                </div>
+            </div>
         </div>
 
-        <div class="history__author-img"></div>
+        <div class="history__author-form-wrapper">
+            <div class="history__author-img"></div>
 
-        <div class="history__mail">
-            <p class="history__offer">Оставьте свою почту и получайте рецепты молодости и здоровья каждую неделю</p>
+            <div class="history__author-form-content">
+                <div class="history__mail">
+                    <p class="history__offer">Оставьте свою почту <br> и получайте рецепты <br> молодости и здоровья
+                        <br>
+                        каждую неделю</p>
 
-            <form class="history__form" action="#" method="post">
-                <p class="history__item">
-                    <label for="history__name"></label>
-                    <input id="history__name" type="email" name="email" value="" placeholder="E-mail">
-                </p>
-            </form>
+                    <form class="history__form" action="#" method="post">
+                        <p class="history__item">
+                            <label for="history__form-email"></label>
+                            <input id="history__form-email" type="email" name="email" value="" placeholder="E-mail">
+                        </p>
+                    </form>
 
-            <a class="button-for-all history__button" href="#">Оставить почту <img src="build/img/arrow.svg" alt=""></a>
+                    <a class="button-for-all history__button" href="#">Оставить почту <img src="build/img/arrow.svg"
+                                                                                           alt=""></a>
+                </div>
+            </div>
         </div>
-
-
-
     </section>
 
     <!-- <section class="saying">
