section saying css

--- a/index.html
+++ b/index.html
@@ -242,113 +242,142 @@
         </div>
     </section>
 
-    <!-- <section class="saying">
-         <h2 class="visually-hidden">Цитата создателя бальзама</h2>
-         <blockquote class="saying__all">
-             «Кто принимает бальзам утром
-             и вечером, тому не нужны другие лекарства, так как он укрепляет тело,
-             оживляет нервы и освежает кровь, снимает дрожь в руках и ногах.
-             Тело остается упругим, лицо молодым и красивым»
-         </blockquote>
-         <cite class="saying__autor">
-             Автор бальзама, Доктор Клаус Замст
-         </cite>
-         <p class="saying__year">
-             /1620-1724 г./
-         </p>
-     </section>
+    <section class="saying">
+        <!--<div class="saying__background"></div>-->
+        <h2 class="visually-hidden">Цитата создателя бальзама</h2>
 
-     <section class="set">
-         <h2 class="set__description"> Что вы получите вместе со сбором трав «Шведская горечь»?</h2>
-         <ul class="set__item">
-             <li class="set__number">01</li>
-             <li class="set__img"></li>
-             <li class="set__about">Сбор трав</li>
-         </ul>
-         <ul class="set__item">
-             <li class="set__number">02</li>
-             <li class="set__img"></li>
-             <li class="set__about">Инструкция по применению</li>
-         </ul>
-         <ul class="set__item">
-             <li class="set__number">03</li>
-             <li class="set__img"></li>
-             <li class="set__about">Сертификат качества</li>
-         </ul>
-     </section>
+        <div class="saying__wrapper-content">
+            <p class="saying__all">
+                «Кто принимает бальзам утром<br>
+                и вечером, тому не нужны другие<br> лекарства, так как он укрепляет тело,<br>оживляет нервы и освежает
+                кровь,<br> снимает дрожь в руках и ногах. <br>Тело остается упругим, лицо<br> молодым и красивым»
+            </p>
 
-     <section class="composition">
-         <h2 class="composition__less">Состав «Шведской горечи»</h2>
-         <ul class="composition__description-up">
-             <li class="composition__description-more">Все травы, входящие в сбор, собраны в альпийском заповеднике
-                 «Гуркталь» и имеют немецкий сертификат качества.
-             </li>
-             <li class="composition__description-more">Строго выверенные пропорции каждого компонента в составе</li>
-         </ul>
+            <div class="saying__wrapper-author">
+                <p class="saying__autor">
+                    Автор бальзама,<br> Доктор Клаус Замст
+                </p>
+                <p class="saying__year">
+                    /1620-1724 г./
+                </p>
+            </div>
+        </div>
+    </section>
 
-         <ul class="composition__description-down">
-             <li class="composition__description-more">Все травы в составе бальзама обладают сильным очищающим
-                 воздействием, при этом каждый из компонентов усиливает действие остальных.
-             </li>
-             <li class="composition__description-more-desktop">Соединяясь вместе они создают мощный очищающий эффект. Как
-                 оказалось, именно за счет этого эффекта бальзам способен исцелять многие болезни.
-             </li>
-         </ul>
+    <!--<section class="set">
+        <div class="set__promo-wrapper">
+            <h2 class="set__promo">Что вы получите вместе со сбором трав «Шведская горечь»?</h2>
+        </div>
 
-         <div class="composition__card">
-             <img src="build/img/component-01.jpg" alt="Изображение компонента">
-             <img src="build/img/component-02.jpg" alt="Изображение компонента">
-             <img src="build/img/component-03.jpg" alt="Изображение компонента">
-             <img src="build/img/component-04.jpg" alt="Изображение компонента">
-             <img src="build/img/component-05.jpg" alt="Изображение компонента">
-             <img src="build/img/component-06.jpg" alt="Изображение компонента">
-             <img src="build/img/component-07.jpg" alt="Изображение компонента">
-             <img src="build/img/component-08.jpg" alt="Изображение компонента">
-             <img src="build/img/component-09.jpg" alt="Изображение компонента">
-             <img src="build/img/component-10.jpg" alt="Изображение компонента">
-             <img src="build/img/component-11.jpg" alt="Изображение компонента">
-         </div>
+        <div class="set__content">
+            <div class="set__wrapper">
+                <div class="set__item set__01">
+                    <div class="set__background set__background-01"></div>
+                    <p class="set__text">Сбор трав</p>
+                </div>
+                <div class="set__item set__02">
+                    <div class="set__background set__background-02"></div>
+                    <p class="set__text">Инструкция по применению</p>
+                </div>
+                <div class="set__item set__03">
+                    <div class="set__background set__background-03"></div>
+                    <p class="set__text">Сертификат качества</p>
+                </div>
+            </div>
+        </div>
+    </section>-->
 
-         <a class="composition__btn order__btn" href="#">Заказать сбор трав</a>
-     </section>
+    <!-- <section class="set">
+        <h2 class="set__description"> Что вы получите вместе со сбором трав «Шведская горечь»?</h2>
+        <ul class="set__item">
+            <li class="set__number">01</li>
+            <li class="set__img"></li>
+            <li class="set__about">Сбор трав</li>
+        </ul>
+        <ul class="set__item">
+            <li class="set__number">02</li>
+            <li class="set__img"></li>
+            <li class="set__about">Инструкция по применению</li>
+        </ul>
+        <ul class="set__item">
+            <li class="set__number">03</li>
+            <li class="set__img"></li>
+            <li class="set__about">Сертификат качества</li>
+        </ul>
+    </section>
 
-     <section class="guarantee">
-         <h2 class="guarantee__less">Гарантия качества</h2>
-         <p class="guarantee__description-up">Если бальзам вам не понравится, мы вернем деньги. Сразу и без лишних
-             вопросов. Мы дорожим своей репутацией и уверены в продукте на 100%</p>
-         <div class="guarantee__sertificate"></div>
-         <div class="guarantee__description-down">
-             <p class="guarantee__but">HO:</p>
-             <p>Этот эликсир – именно то средство,
-                 которое вам всегда захочется иметь
-                 дома в аптечке и рекомендовать
-                 своим близким.
-             </p>
-             <p>К каждой упаковке «Шведской горечи»
-                 мы прикладываем немецкий сертифи-
-                 кат качества.
-             </p>
-         </div>
+    <section class="composition">
+        <h2 class="composition__less">Состав «Шведской горечи»</h2>
+        <ul class="composition__description-up">
+            <li class="composition__description-more">Все травы, входящие в сбор, собраны в альпийском заповеднике
+                «Гуркталь» и имеют немецкий сертификат качества.
+            </li>
+            <li class="composition__description-more">Строго выверенные пропорции каждого компонента в составе</li>
+        </ul>
 
-         <a class="guarantee__btn order__btn" href="#">Заказать сбор трав</a>
-     </section>
- </main>
+        <ul class="composition__description-down">
+            <li class="composition__description-more">Все травы в составе бальзама обладают сильным очищающим
+                воздействием, при этом каждый из компонентов усиливает действие остальных.
+            </li>
+            <li class="composition__description-more-desktop">Соединяясь вместе они создают мощный очищающий эффект. Как
+                оказалось, именно за счет этого эффекта бальзам способен исцелять многие болезни.
+            </li>
+        </ul>
 
- <footer class="page-footer">
-     <a class="page-footer__logo" href="#">
-         <img class="page-footer__logo-image" src="build/img/logo-tablet.png" alt="Шведская горечь" width="198"
-              height="29">
-     </a>
-     <ul class="page-footer__additions">
-         <li class="page-footer__confidence">Политика конфиденциальности</li>
-         <li class="page-footer__refuse">Отказ от ответственности</li>
-         <li class="page-footer__agree">Согласие с рассылкой</li>
-     </ul>
-     <ul class="page-footer__phone bitter-phone">
-         <li class="page-footer__number bitter-phone__num">8 800 000-00-00</li>
-         <li class="page-footer__about-phone bitter-phone__about">Звонок бесплатный</li>
-     </ul>
- </footer>-->
+        <div class="composition__card">
+            <img src="build/img/component-01.jpg" alt="Изображение компонента">
+            <img src="build/img/component-02.jpg" alt="Изображение компонента">
+            <img src="build/img/component-03.jpg" alt="Изображение компонента">
+            <img src="build/img/component-04.jpg" alt="Изображение компонента">
+            <img src="build/img/component-05.jpg" alt="Изображение компонента">
+            <img src="build/img/component-06.jpg" alt="Изображение компонента">
+            <img src="build/img/component-07.jpg" alt="Изображение компонента">
+            <img src="build/img/component-08.jpg" alt="Изображение компонента">
+            <img src="build/img/component-09.jpg" alt="Изображение компонента">
+            <img src="build/img/component-10.jpg" alt="Изображение компонента">
+            <img src="build/img/component-11.jpg" alt="Изображение компонента">
+        </div>
+
+        <a class="composition__btn order__btn" href="#">Заказать сбор трав</a>
+    </section>
+
+    <section class="guarantee">
+        <h2 class="guarantee__less">Гарантия качества</h2>
+        <p class="guarantee__description-up">Если бальзам вам не понравится, мы вернем деньги. Сразу и без лишних
+            вопросов. Мы дорожим своей репутацией и уверены в продукте на 100%</p>
+        <div class="guarantee__sertificate"></div>
+        <div class="guarantee__description-down">
+            <p class="guarantee__but">HO:</p>
+            <p>Этот эликсир – именно то средство,
+                которое вам всегда захочется иметь
+                дома в аптечке и рекомендовать
+                своим близким.
+            </p>
+            <p>К каждой упаковке «Шведской горечи»
+                мы прикладываем немецкий сертифи-
+                кат качества.
+            </p>
+        </div>
+
+        <a class="guarantee__btn order__btn" href="#">Заказать сбор трав</a>
+    </section>
+</main>
+
+<footer class="page-footer">
+    <a class="page-footer__logo" href="#">
+        <img class="page-footer__logo-image" src="build/img/logo-tablet.png" alt="Шведская горечь" width="198"
+             height="29">
+    </a>
+    <ul class="page-footer__additions">
+        <li class="page-footer__confidence">Политика конфиденциальности</li>
+        <li class="page-footer__refuse">Отказ от ответственности</li>
+        <li class="page-footer__agree">Согласие с рассылкой</li>
+    </ul>
+    <ul class="page-footer__phone bitter-phone">
+        <li class="page-footer__number bitter-phone__num">8 800 000-00-00</li>
+        <li class="page-footer__about-phone bitter-phone__about">Звонок бесплатный</li>
+    </ul>
+</footer>-->
 
 </main>
 </body>
