section set css

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
         </div>
     </section>
 
-    <!--<section class="set">
+    <section class="set">
         <div class="set__promo-wrapper">
             <h2 class="set__promo">Что вы получите вместе со сбором трав «Шведская горечь»?</h2>
         </div>
@@ -285,7 +285,7 @@
                 </div>
             </div>
         </div>
-    </section>-->
+    </section>
 
     <!-- <section class="set">
         <h2 class="set__description"> Что вы получите вместе со сбором трав «Шведская горечь»?</h2>
