--- a/index.html
+++ b/index.html
@@ -272,16 +272,22 @@
         <div class="set__content">
             <div class="set__wrapper">
                 <div class="set__item set__01">
-                    <div class="set__background set__background-01"></div>
-                    <p class="set__text">Сбор трав</p>
+                    <div class="set__item-wrapper">
+                        <div class="set__background set__background-01"></div>
+                        <p class="set__text">Сбор трав</p>
+                    </div>
                 </div>
                 <div class="set__item set__02">
-                    <div class="set__background set__background-02"></div>
-                    <p class="set__text">Инструкция по применению</p>
+                    <div class="set__item-wrapper">
+                        <div class="set__background set__background-02"></div>
+                        <p class="set__text">Инструкция по применению</p>
+                    </div>
                 </div>
                 <div class="set__item set__03">
-                    <div class="set__background set__background-03"></div>
-                    <p class="set__text">Сертификат качества</p>
+                    <div class="set__item-wrapper">
+                        <div class="set__background set__background-03"></div>
+                        <p class="set__text">Сертификат качества</p>
+                    </div>
                 </div>
             </div>
         </div>
